Changes since 0.2.8.3.x:
- Added detection and reaction code for timing assist bots
- /shuffle now works before you actually join a team
- Implemented /shout command and associated settings
- Tweaks to enemy influence system.
- Ingame menu and console now are drawn on top of a semi-transparent,
  darkened area for increased readability.
- New first start menu with clearer language selection and initial setup.
- Tutorial match against one AI at slower speed.
- Tutorial tooltips for the most important keybindings.
- ADD_MASTER_SERVER command to announce a server to a new master server.
  Simplifies the process to list your server on a subculture.
- Team launch positions logged to ladderlog with POSITIONS event. Disabled by
  default.
- New command-line option "--input" added to poll for input from a file
  instead of stdin.
- Added WHITELIST_ENEMIES_[IP/USERNAME] to allow players to be enemies, even
  if they come from the same IP address and ALLOW_ENEMIES_SAME_IP is
  disabled (which is its default setting).
- GAME_END, NEW_MATCH, and NEW_ROUND ladderlog events include date and time.
- Added ENCODING ladderlog event, which specifies the encoding for data in
  ladderlog.txt.
- "--input" now can be used more than once to read from multiple files or pipes.
- new team management ladderlog messages:
  TEAM_CREATED <team name>
  TEAM_DESTROYED <team name>
  TEAM_RENAMED <old team name> <new team name>
  TEAM_PLAYER_ADDED <team name> <player>
  TEAM_PLAYER_REMOVED <team name> <player>
- Manage external scripts on Unix dedicated servers. New commands: 
  SPAWN_SCRIPT, RESPAWN_SCRIPT, FORCE_RESPAWN_SCRIPT, KILL_SCRIPT,
  LIST_SCRIPTS, SCRIPT_ENV.
- Authentication is now enabled by default.

Changes since 0.2.8.3.1:
- security fix: old style action commands from clients no loger cause hangs and crashes
- security fix: oversized packets are ignored properly
- security fix: never read one byte outside of the received buffer