@@ -1470,32 +1470,32 @@ public:
 protected:
     virtual bool DoCheckValid( int senderID )
     {
+        
         // check whether enough harmful votes were collected already
         ePlayerNetID * p = GetPlayer();
-        if ( p && !p->GetVoter() )
+        if ( fromMenu_ && p )
         {
-            p->CreateVoter();
-        }
-
-        if ( fromMenu_ && p && p->GetVoter() && p->GetVoter()->HarmCount() < se_kickMinHarm )
-        {
-            // try to transfor the vote to a suspension
-            eVoteItem * item = tNEW ( eVoteItemSuspend )( p );
+            eVoter *voter = eVoter::GetVoter( p->Owner() );
+            if ( voter && voter->HarmCount() < se_kickMinHarm )
+            {
+                // try to transfor the vote to a suspension
+                eVoteItem * item = tNEW ( eVoteItemSuspend )( p );
             
-            // let item check its validity
-            if ( !item->CheckValid( senderID ) )
-            {
-                delete item;
-            }
-            else
-            {
-                // no objection? Broadcast it to everyone.
-                item->Update();
-                item->ReBroadcast( senderID );
-            }
+                // let item check its validity
+                if ( !item->CheckValid( senderID ) )
+                {
+                    delete item;
+                }
+                else
+                {
+                    // no objection? Broadcast it to everyone.
+                    item->Update();
+                    item->ReBroadcast( senderID );
+                }
 
-            // and cancel this item here.
-            return false;
+                // and cancel this item here.
+                return false;
+            }
         }
 
         // no transformation needed or transformation failed. Proceed as usual.
@@ -1978,7 +1978,7 @@ bool eVoter::VotingPossible()
     return eVoteItem::GetItems().Len() > 0;
 }
 
-eVoter* eVoter::GetVoter( int ID, bool complain )			// find or create the voter for the specified ID
+eVoter* eVoter::GetVoter( int ID, bool complain )
 {
     // the server has no voter
 #ifdef DEDICATED
@@ -2007,13 +2007,17 @@ eVoter* eVoter::GetVoter( int ID, bool complain )			// find or create the voter 
         }
     }
 
-    // get machine from network subsystem
-    nMachine & machine = nMachine::GetMachine( ID );
-
-    return GetVoter( machine );
+    return GetPersistentVoter( ID );
 }
 
-eVoter* eVoter::GetVoter( nMachine & machine )			// find or create the voter for the specified machine
+eVoter* eVoter::GetPersistentVoter( int ID )
+{
+    // get machine from network subsystem
+    nMachine & machine = nMachine::GetMachine( ID );
+    return GetPersistentVoter( machine );
+}
+
+eVoter* eVoter::GetPersistentVoter( nMachine & machine )
 {
     // iterate through the machine's decorators, find a voter
     nMachineDecorator * run = machine.GetDecorators();
